--- a/ordersOnFront/pom.xml
+++ b/ordersOnFront/pom.xml
@@ -7,6 +7,17 @@
     <groupId>commonIntTesting</groupId>
     <artifactId>ordersOnFront</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>3.141.59</version>
+    </dependency>
+        <dependency>
+            <groupId>com.slickqa</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.0.0-7</version>
+        </dependency>
+    </dependencies>
 
 </project>
