--- a/ordersOnFront/pom.xml
+++ b/ordersOnFront/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>testng</artifactId>
             <version>7.0.0-7</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
     </dependencies>
 
 </project>
